--- a/ex01_241120_JPA_prectice/src/main/resources/templates/detail.html
+++ b/ex01_241120_JPA_prectice/src/main/resources/templates/detail.html
@@ -21,7 +21,7 @@
                     </tr>
                     <tr>
                         <th>내용 :</th>
-                        <td><textarea th:field="*{memoText}" cols="50" rows="10">[[${memo.memoText}]]</textarea></td>
+                        <td><textarea th:field="*{memoText}" cols="50" rows="10" th:readonly="${session.id != memo.writer}">[[${memo.memoText}]]</textarea></td>
                     </tr>
                     <th:block th:if="${session.id == memo.writer}">
                         <tr>
@@ -39,6 +39,6 @@
             </table>
         </form>
     </div>
-    <a th:href="@{/board/list}">목록보기</a>
+    <a th:href="@{/board/list/1?size={size}(size=${size})}">목록보기</a>
 </body>
 </html>
